; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeGetValue.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeGetValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@OBJ_ENCODING_ZIPLIST = common dso_local global i64 0, align 8
@C_OK = common dso_local global i32 0, align 4
@OBJ_ENCODING_HT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"Unknown hash encoding\00", align 1
@C_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hashTypeGetValue(%struct.TYPE_5__* %0, i32* %1, i8** %2, i32* %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8** %2, i8*** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64* %4, i64** %11, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @OBJ_ENCODING_ZIPLIST, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %30

18:                                               ; preds = %5
  %19 = load i8**, i8*** %9, align 8
  store i8* null, i8** %19, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i8**, i8*** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = load i64*, i64** %11, align 8
  %25 = call i64 @hashTypeGetFromZiplist(%struct.TYPE_5__* %20, i32* %21, i8** %22, i32* %23, i64* %24)
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %18
  %28 = load i32, i32* @C_OK, align 4
  store i32 %28, i32* %6, align 4
  br label %55

29:                                               ; preds = %18
  br label %53

30:                                               ; preds = %5
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @OBJ_ENCODING_HT, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %50

36:                                               ; preds = %30
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = call i32* @hashTypeGetFromHashTable(%struct.TYPE_5__* %37, i32* %38)
  store i32* %39, i32** %12, align 8
  %40 = icmp ne i32* %39, null
  br i1 %40, label %41, label %49

41:                                               ; preds = %36
  %42 = load i32*, i32** %12, align 8
  %43 = bitcast i32* %42 to i8*
  %44 = load i8**, i8*** %9, align 8
  store i8* %43, i8** %44, align 8
  %45 = load i32*, i32** %12, align 8
  %46 = call i32 @sdslen(i32* %45)
  %47 = load i32*, i32** %10, align 8
  store i32 %46, i32* %47, align 4
  %48 = load i32, i32* @C_OK, align 4
  store i32 %48, i32* %6, align 4
  br label %55

49:                                               ; preds = %36
  br label %52

50:                                               ; preds = %30
  %51 = call i32 @serverPanic(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %52

52:                                               ; preds = %50, %49
  br label %53

53:                                               ; preds = %52, %29
  %54 = load i32, i32* @C_ERR, align 4
  store i32 %54, i32* %6, align 4
  br label %55

55:                                               ; preds = %53, %41, %27
  %56 = load i32, i32* %6, align 4
  ret i32 %56
}

declare dso_local i64 @hashTypeGetFromZiplist(%struct.TYPE_5__*, i32*, i8**, i32*, i64*) #1

declare dso_local i32* @hashTypeGetFromHashTable(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @sdslen(i32*) #1

declare dso_local i32 @serverPanic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
